--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -1,7 +1,13 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
+.is-hidden {
+  display: none;
+}
+
 .gallery {
+  margin-top: 80px;
   display: flex;
   flex-wrap: wrap;
+  position: absolute;
 }
 
 .photo-card {
@@ -27,6 +33,40 @@
   margin-top: 50px;
 }
 
-.is-hidden {
-  display: none;
+.search-form {
+  position: fixed;
+  width: 100%;
+  height: 70px;
+  gap: 15;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #445683;
+}
+
+.search-img {
+  padding: 3px 5px;
+  width: 200px;
+  height: 30px;
+  outline: unset;
+  border: 1px solid #a2a2a2;
+  border-radius: 5px;
+}
+.search-img:focus {
+  border-color: #5ad5fe;
+}
+
+.submit-search {
+  width: 80px;
+  height: 30px;
+  font-weight: 600;
+  background-color: #e5e5e5;
+  border: none;
+  border-radius: 5px;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: ease-in-out;
+}
+.submit-search:hover, .submit-search:focus {
+  background-color: #80aec2;
 }/*# sourceMappingURL=index.css.map */
