--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,26 +1,46 @@
 .gallery {
-  margin-top: 80px;
+  margin-top: 90px;
   display: flex;
   flex-wrap: wrap;
-  position: absolute;
 }
 
 .photo-card {
-  width: calc((100% - 90px) / 4);
+  width: 300px;
   height: 300px;
+
+  &:not(:nth-child(4n)) {
+    margin-right: 30px;
+  }
 }
 
 .photo {
   width: 100%;
-  height: 250px;
+  height: 200px;
 
   & > img {
+    margin-right: 0;
     display: block;
-    height: 70%;
+    // height: 70%;
     max-width: 100%;
     object-fit: cover;
     object-position: center;
   }
+}
+.info {
+  display: flex;
+  justify-content: space-between;
+}
+.info-item {
+  display: inline-flex;
+  flex-direction: column;
+  text-align: center;
+}
+.info-content--bold {
+  font-size: 14px;
+  font-weight: 700;
+}
+.info-content {
+  font-size: 14px;
 }
 
 .load-more {
