--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -4,29 +4,51 @@
 }
 
 .gallery {
-  margin-top: 80px;
+  margin-top: 90px;
   display: flex;
   flex-wrap: wrap;
-  position: absolute;
 }
 
 .photo-card {
-  width: calc((100% - 90px) / 4);
+  width: 300px;
   height: 300px;
+}
+.photo-card:not(:nth-child(4n)) {
+  margin-right: 30px;
 }
 
 .photo {
   width: 100%;
-  height: 250px;
+  height: 200px;
 }
 .photo > img {
+  margin-right: 0;
   display: block;
-  height: 70%;
   max-width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   -o-object-position: center;
      object-position: center;
+}
+
+.info {
+  display: flex;
+  justify-content: space-between;
+}
+
+.info-item {
+  display: inline-flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.info-content--bold {
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.info-content {
+  font-size: 14px;
 }
 
 .load-more {
@@ -35,6 +57,8 @@
 
 .search-form {
   position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 70px;
   gap: 15;
