final styles and corrections

--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,5 +1,7 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
-
+body {
+  text-align: center;
+}
 .is-hidden {
   display: none;
 }
