--- a/src/sass/_form.scss
+++ b/src/sass/_form.scss
@@ -22,6 +22,10 @@
   border: 1px solid #a2a2a2;
   border-radius: 5px;
 
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: ease-in-out;
+
   &:focus {
     border-color: #5ad5fe;
   }
