--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,15 +1,25 @@
-.gallery {
-  margin-top: 90px;
+.gallery-container {
   display: flex;
+  justify-content: center;
+}
+
+.gallery {
+  max-width: 1290px;
+  margin-top: 90px;
+  display: inline-flex;
   flex-wrap: wrap;
+  gap: 30px;
 }
 
 .photo-card {
   width: 300px;
-  height: 300px;
+  height: 270px;
 
-  &:not(:nth-child(4n)) {
-    margin-right: 30px;
+  border-radius: 6px;
+  box-shadow: 0 2px 4px #0000004f;
+
+  &:not(:nth-last-child(-n + 4)) {
+    margin-bottom: 30px;
   }
 }
 
@@ -18,17 +28,18 @@
   height: 200px;
 
   & > img {
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
     margin-right: 0;
     display: block;
-    // height: 70%;
-    max-width: 100%;
+    height: 100%;
+    width: 100%;
     object-fit: cover;
-    object-position: center;
   }
 }
 .info {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 .info-item {
   display: inline-flex;
@@ -44,5 +55,28 @@
 }
 
 .load-more {
-  margin-top: 50px;
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 110px;
+  height: 30px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+
+  color: white;
+  background-color: #445683;
+  border: none;
+  border-radius: 5px;
+
+  font-weight: 600;
+
+  transition-property: background-color, box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: ease-in-out;
+
+  &:hover,
+  &:focus {
+    background-color: #354264;
+    box-shadow: 0px 2px 4px #0000004f;
+  }
 }
