--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -1,20 +1,33 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
+body {
+  text-align: center;
+}
+
 .is-hidden {
   display: none;
 }
 
-.gallery {
-  margin-top: 90px;
+.gallery-container {
   display: flex;
+  justify-content: center;
+}
+
+.gallery {
+  max-width: 1290px;
+  margin-top: 90px;
+  display: inline-flex;
   flex-wrap: wrap;
+  gap: 30px;
 }
 
 .photo-card {
   width: 300px;
-  height: 300px;
+  height: 270px;
+  border-radius: 6px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3098039216);
 }
-.photo-card:not(:nth-child(4n)) {
-  margin-right: 30px;
+.photo-card:not(:nth-last-child(-n+4)) {
+  margin-bottom: 30px;
 }
 
 .photo {
@@ -22,18 +35,19 @@
   height: 200px;
 }
 .photo > img {
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
   margin-right: 0;
   display: block;
-  max-width: 100%;
+  height: 100%;
+  width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-  -o-object-position: center;
-     object-position: center;
 }
 
 .info {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 .info-item {
@@ -52,7 +66,25 @@
 }
 
 .load-more {
-  margin-top: 50px;
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 110px;
+  height: 30px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: white;
+  background-color: #445683;
+  border: none;
+  border-radius: 5px;
+  font-weight: 600;
+  transition-property: background-color, box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: ease-in-out;
+}
+.load-more:hover, .load-more:focus {
+  background-color: #354264;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3098039216);
 }
 
 .search-form {
@@ -75,6 +107,9 @@
   outline: unset;
   border: 1px solid #a2a2a2;
   border-radius: 5px;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: ease-in-out;
 }
 .search-img:focus {
   border-color: #5ad5fe;
