--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,6 +1,7 @@
 .gallery-container {
   display: flex;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .gallery {
